--- a/wallet-deployment.yaml
+++ b/wallet-deployment.yaml
@@ -17,3 +17,13 @@ spec:
           image: dragonevo/ewallet-wallet:latest
           ports:
             - containerPort: 8081 # HTTP
+          env:
+            - name: UMS_GRPC_HOST
+              value: ums:7000
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "300m"
+              memory: "256Mi"
